<resources>
    <string name="app_name">Final Project</string>
    <string name="StudyBuddy">Study Buddy</string>
    <string name="Start">Start</string>
    <string name="Pause">Pause</string>
    <string name="StartStudying">Let\'s Start Studying!</string>
    <string name="GoodWork">Good Work, Keep it Up!</string>
    <string name="Ready">Ready to keep going?</string>
    <string name="DeserveBreak">You Deserve a Break</string>
    <string name="RestUp">Rest Up and Get Ready!</string>
    <string name="Light">Light</string>
    <string name="Temperature">Temperature</string>
    <string name="Humidity">Humidity</string>
    <string name="CheckSurroundings">Check Your Surroundings</string>
    <string name="Settings">Settings</string>
    <string name="StudyTimer">Study Timer</string>
    <string name="SensorType">Type</string>
    <string name="SensorMeasure">Measure</string>
    <string name="SensorStatus">Status</string>
    <string name="Down">GO DOWN</string>
    <string name="Good">GOOD</string>
    <string name="Up">GO UP</string>
    <string name="timer_tab">Timer Tab</string>
    <string name="evaluate_area_tab">Evaluate Area Tab</string>
    <string name="settings_tab">Settings Tab</string>
    <string name="sharedPreferences">AppSharedPreferences</string>
    <string name="studyTimeKey">studyTime</string>
    <string name="breakTimeKey">breakTime</string>
    <string name="lightMinKey">lightMin</string>
    <string name="lightMaxKey">lightMax</string>
    <string name="tempMinKey">tempMin</string>
    <string name="tempMaxKey">tempMax</string>
    <string name="humidityMinKey">humidityMin</string>
    <string name="humidityMaxKey">humidityMax</string>
    <string name="controls">Controls</string>
    <string name="adjust">Adjust</string>
    <string name="studyTime">Study Time</string>
    <string name="breakTime">Break Time</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="good">Good</string>

    <string-array name="study_items">
        <item>High Study Time</item>
        <item>Medium Study Time</item>
        <item>Low Study Time</item>
    </string-array>
    <string-array name="break_items">
        <item>High Break Time</item>
        <item>Medium Break Time</item>
        <item>Low Break Time</item>
    </string-array>
    <string-array name="light_items">
        <item>High Light</item>
        <item>Medium Light</item>
        <item>Low Light</item>
    </string-array>
    <string-array name="temp_items">
        <item>High Temp</item>
        <item>Medium Temp</item>
        <item>Low Temp</item>
    </string-array>
    <string-array name="humidity_items">
        <item>High Humidity</item>
        <item>Medium Humidity</item>
        <item>Low Humidity</item>
    </string-array>
</resources>