<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/nav_bar"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">


    <ImageView
        android:id="@+id/timer"
        android:layout_width="0dp"
        android:layout_height="@dimen/navBarHeight"
        android:layout_weight="1"
        android:src="@drawable/timer"
        android:contentDescription="@string/timer_tab" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/grey" />

    <ImageView
        android:id="@+id/check"
        android:layout_width="0dp"
        android:layout_height="@dimen/navBarHeight"
        android:layout_weight="1"
        android:src="@drawable/lamp"
        android:contentDescription="@string/evaluate_area_tab" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/grey" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="0dp"
        android:layout_height="@dimen/navBarHeight"
        android:layout_weight="1"
        app:srcCompat="@drawable/settings"
        android:contentDescription="@string/settings_tab" />
</LinearLayout>